noi mici modificari

--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -264,7 +264,7 @@
 
             <div class="grid grid-cols-2 gap-4 mt-6">
                 <div class="col-span-1 flex items-center">LK15. Who is the legal guardian of the child?</div>
-                <div class="col-span-1 flex flex-col gap-4">
+                <div class="col-span-1 flex gap-4 flex-col">
                     <div class="flex items-center">
                         <input id="lk15-1" type="radio" value="1" name="lk15" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="lk15-1" class="ms-2 text-sm text-gray-900">1. His/her parents</label>
