--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -2042,7 +2042,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-start mt-6">
                 <div class="col-span-1">CR9. Есть ли какие-либо важные сферы, где молодой человек нуждается в усиленной поддержке?</div>
-                <div class="col-span-1 flex flex-col gap-4">
+                <div class="col-span-1 flex gap-4 flex-col">
                     <div class="flex gap-4">
                         <div class="flex items-center">
                             <input id="cr9-1" type="radio" value="1" name="cr9" class="border-gray-400 w-4 h-4 text-blue-600 focus:ring-blue-500 disabled:bg-gray-200" />
